@@ -34,6 +34,9 @@ static R_len_t asVecSize(SEXP x)
     double d;
 
     if (isVectorAtomic(x) && LENGTH(x) >= 1) {
+	if (LENGTH(x) > 1)
+	    warning(_("%d lengths supplied: the first will be used"), 
+		    LENGTH(x));
 	switch (TYPEOF(x)) {
 	case LGLSXP:
 	    res = IntegerFromLogical(LOGICAL(x)[0], &warn);
